# shamir

./: .clang-format  .gitignore  CMakeLists.txt  CODEOWNERS
include/math/: math.h
include/server/: client.h  session.h  tcp_server.h
include/storage/: storage.h
include/threadpool/: queue.h  task.h  thread_pool.h  wait_group.h
include/utils/: debug.h  macros.h  mailutils.h
libs/: CMakeLists.txt
libs/math/: math.cpp
libs/server/: client.cpp  tcp_server.cpp
libs/storage/: storage.cpp
libs/threadpool/: thread_pool.cpp
libs/utils/: debug.cpp
shagit/: shagit.cpp  shagit_server.cpp
shamir/: client.cpp  server.cpp
test/: math_test.cpp
